--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <h2>Home Page</h2>
         <button onclick="location.href='Asteroids/index.html'">Asteroids</button>
         <button onclick="location.href='Blackjack/index.html'">Blackjack</button>
+        <button onclick="location.href='Sokoban/index.html'">Sokoban</button>
     </main>
 </html>
