--- a/Sokoban/index.html
+++ b/Sokoban/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Sokoban.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Sokoban.data.br",
-        frameworkUrl: buildUrl + "/Sokoban.framework.js.br",
-        codeUrl: buildUrl + "/Sokoban.wasm.br",
+        dataUrl: buildUrl + "/Sokoban.data",
+        frameworkUrl: buildUrl + "/Sokoban.framework.js",
+        codeUrl: buildUrl + "/Sokoban.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Sokoban",
