--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <button onclick="location.href='Asteroids/index.html'">Asteroids</button>
         <button onclick="location.href='Blackjack/index.html'">Blackjack</button>
         <button onclick="location.href='Sokoban/index.html'">Sokoban</button>
-        <button onclick="location.href='Malgnant/index.html'">Malignant</button>
+        <button onclick="location.href='Malignant/index.html'">Malignant</button>
     </main>
 </html>
