New Malignant Build

--- a/Malignant/index.html
+++ b/Malignant/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Malignant.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Malignant.data.br",
-        frameworkUrl: buildUrl + "/Malignant.framework.js.br",
-        codeUrl: buildUrl + "/Malignant.wasm.br",
+        dataUrl: buildUrl + "/Malignant.data",
+        frameworkUrl: buildUrl + "/Malignant.framework.js",
+        codeUrl: buildUrl + "/Malignant.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Malignant",
