Added Plate Vis

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         <button onclick="location.href='Blackjack/index.html'">Blackjack</button>
         <button onclick="location.href='Sokoban/index.html'">Sokoban</button>
         <button onclick="location.href='Malignant/index.html'">Malignant</button>
+        <button onclick="location.href='PlateVisualization/index.html'">Plate Visualization</button>
     </main>
+</html>  </main>
 </html>
