--- a/PlateVisualization/index.html
+++ b/PlateVisualization/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Builds.loader.js";
+      var loaderUrl = buildUrl + "/PlateVisualization.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Builds.data",
-        frameworkUrl: buildUrl + "/Builds.framework.js",
-        codeUrl: buildUrl + "/Builds.wasm",
+        dataUrl: buildUrl + "/PlateVisualization.data",
+        frameworkUrl: buildUrl + "/PlateVisualization.framework.js",
+        codeUrl: buildUrl + "/PlateVisualization.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Volcaon Simulation",
@@ -100,6 +100,4 @@
       document.body.appendChild(script);
     </script>
   </body>
-</html>
-  </main>
 </html>
